codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────╮
│ ✨ Update available! CURRENT_VERSION -> NEXT_VERSION                  │
│ Run npm install -g @leonw24/open-codex@latest to update.       │
│                                                                │
│ See full release notes:                                        │
│ https://github.com/LEON-gittech/Open-Codex-CLI/releases/latest │
╰────────────────────────────────────────────────────────────────╯
