codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__user_history_cell_renders_remote_image_urls.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────────────
  [Image #1]

User › describe these
────────────────────────────────────────────────────────────────────────────────
