codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__user_history_cell_wraps_and_prefixes_each_line_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
────────────
User › one two
       three
       four five
       six seven
────────────
